# braincontrol

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/braincontrol/: main.py  transitions.py
tests/: test_transitions.py
