[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "braincontrol"
version = "0.1.0"
description = "Network Control Theory for Neuroimaging Data"
authors = [
    { name="Johannes Wiesner", email="joh.wiesner@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["nctpy>=1.0.1"]

[project.urls]
Homepage = "https://github.com/JohannesWiesner/braincontrol"
