[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "braincontrol"
version = "0.1.1"
description = "Network Control Theory for Neuroimaging Data"
authors = [
    { name="Johannes Wiesner", email="joh.wiesner@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "nctpy>=1.0.1",
    "scipy<1.14"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/JohannesWiesner/braincontrol"
